force-app/main/default/objects/Chat_Message__c/fields/Conversation__c.field-meta.xml
<CustomField>
    <fullName>Conversation__c</fullName>
    <label>Conversation</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>