force-app/main/default/objects/Chat_Message__c/fields/Image__c.field-meta.xml
<CustomField>
    <fullName>Image__c</fullName>
    <formula>IMAGE(&quot;/sfc/servlet.shepherd/version/download/06826000000dHTR&quot;, &#39;image alternate text&#39;,240,320)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Image</label>
    <type>Text</type>
</CustomField>