force-app/main/default/objects/Chat_Message__c/fields/Participant_1__c.field-meta.xml
<CustomField>
    <fullName>Participant_1__c</fullName>
    <label>Participant 1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>