force-app/main/default/objects/Chat_Message__c/fields/Participant_2__c.field-meta.xml
<CustomField>
    <fullName>Participant_2__c</fullName>
    <label>Participant 2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>