force-app/main/default/objects/Chat_Message__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <length>40</length>
    <type>Text</type>
</CustomField>