force-app/main/default/objects/Chat_Message__c/fields/Read__c.field-meta.xml
<CustomField>
    <fullName>Read__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Described whether a particular message has been read by the user or not</description>
    <label>Read</label>
    <type>Checkbox</type>
</CustomField>