force-app/main/default/objects/Chat_Message__c/fields/Timestamp1__c.field-meta.xml
<CustomField>
    <fullName>Timestamp1__c</fullName>
    <description>The timestamp for participant 1, in their local timezone.</description>
    <label>Timestamp1</label>
    <type>DateTime</type>
</CustomField>