force-app/main/default/objects/Chat_Message__c/fields/Timestamp2__c.field-meta.xml
<CustomField>
    <fullName>Timestamp2__c</fullName>
    <description>The timestamp for participant 2, in their local timezone</description>
    <label>Timestamp2</label>
    <type>DateTime</type>
</CustomField>