force-app/main/default/objects/Chat_Message__c/fields/Timestamp2_String__c.field-meta.xml
<CustomField>
    <fullName>Timestamp2_String__c</fullName>
    <formula>TEXT( DAY(  DATEVALUE (Timestamp2__c)  ) )
&amp; &quot; &quot;
&amp; CASE(MONTH(  DATEVALUE (Timestamp2__c)),
1, &quot;Jan&quot;,
2, &quot;Feb&quot;,
3, &quot;Mar&quot;, 
4, &quot;Apr&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;Aug&quot;,
9, &quot;Sep&quot;,
10, &quot;Oct&quot;,
11, &quot;Nov&quot;,
12, &quot;Dec&quot;,
&quot;None&quot;)
&amp; &quot; &quot; &amp; TEXT( YEAR(  DATEVALUE (Timestamp2__c)  ) )   
&amp; &quot; &quot; &amp; TEXT(TIMEVALUE(Timestamp2__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timestamp2 String</label>
    <type>Text</type>
</CustomField>